--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col">
 
             <h1>Jugador 1 - <small>0</small></h1>
-            <div id="jugador-cartas">
+            <div id="jugador-cartas" class="divCartas">
                 <!-- <img class="carta" src="/assets/cartas/10C.png"> -->
 
             </div>
@@ -40,7 +40,7 @@
         <div class="col">
 
             <h1>Computadora - <small>0</small></h1>
-            <div id="computador-cartas">
+            <div id="computador-cartas" class="divCartas">
                 <!-- <img class="carta" src="/assets/cartas//KC.png"> -->
 
             </div>
